# ClawScript

./: .editorconfig  .gitignore  .voltsec  CMakeLists.txt  DOCUMENTATION.md  LICENSE.txt  README.md  benchmark.volt  perf_test_2.txt  perf_test_5.txt  perf_test_7.txt  perf_test_8.txt  profile.heap.folded  profile.html  profile.speedscope.json  sourcefiles.txt  stress_test.txt  temp_replace_test.volt  temp_test.volt  temp_test2.volt  test_log.txt  test_stack_overflow.volt  test_stack_trace.volt  v0.8.4_RELEASE_NOTES.md  volt_profile.html  volt_profile.speedscope.json
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_interpreter.cpp  benchmark_jit.cpp  benchmark_main.cpp  benchmark_policy.cpp  benchmark_string_pool.cpp  benchmark_vm.cpp
cmake/toolchains/: musl-aarch64.cmake  musl-x86_64.cmake
docker/alpine/: Dockerfile
docs/: API_GENERATED.md  API_REFERENCE.md  CHANGELOG.md  DOCUMENTATION.md  MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  USER_GUIDE.md  v0.8.0_RELEASE_NOTES.md  v0.8.2_RELEASE_NOTES.md  v0.8.6_RELEASE_NOTES.md
examples/: advanced_arrays.volt  advanced_strings.volt  array_manipulation.volt  bank_account.volt  enhanced_features.volt  file_operations.volt  file_processing.volt  functional_programming.volt  functional_programming_examples.volt  higher_order.volt  mathematical_functions.volt  max_min.volt  nested_closures.volt  performance_benchmarking.volt  power_recursion.volt  run_until_loop.volt  sorting_algorithms.volt  test_errors.volt
examples/advanced/: debug.claw  debug_test.claw  nan_boxing_demo.claw  nan_boxing_demo.volt  temp_test.volt  vm_vs_interpreter_loop.claw  vm_vs_interpreter_loop.volt
examples/advanced_examples/: date_time_operations.claw  date_time_operations.volt  functional_programming_examples.claw  game_simulation.claw  game_simulation.volt  json_data_processing.claw  json_data_processing.volt  mathematical_computations.claw  mathematical_computations.volt  performance_benchmarking.claw  sorting_algorithms.claw  string_processing.claw  string_processing.volt
examples/algorithms/: recursion_test.claw  recursion_test.volt  recursive_test.claw  recursive_test.volt
examples/basic/: basic_function_test.claw  basic_function_test.volt  hello_function.volt  minimal_test.claw  minimal_test.volt  simple_access_test.claw  simple_access_test.volt  simple_array_test.claw  simple_array_test.volt  simple_func_test.claw  simple_func_test.volt  simple_map_test.claw  simple_map_test.volt  simple_param_test.claw  simple_param_test.volt  simple_string_test.claw  simple_string_test.volt  simple_test.claw  simple_test.volt
examples/data_structures/: advanced_arrays.claw  array_index_test.claw  array_index_test.volt  array_literal_test.claw  array_literal_test.volt  array_manipulation.claw  array_print_test.claw  array_print_test.volt  detailed_index_test.claw  detailed_index_test.volt  hash_maps.claw  hashmap_operations.claw  hashmap_operations.volt  json_handling.claw  json_handling.volt  single_index_test.claw  single_index_test.volt  test_array_methods.claw  test_array_methods.volt  test_method_chaining.claw  test_method_chaining.volt  test_new_array_methods.claw  test_new_array_methods.volt
examples/error_handling/: try_catch.claw  try_catch.volt
examples/functional/: closure_test.claw  closure_test.volt  complex_closures.volt  counter_closure.volt  filter_simulation.claw  function_composition.claw  functional_programming.claw
examples/integration/: json_file_pipeline.claw  json_file_pipeline.volt
examples/jit/: call_binding.claw  call_binding_small.volt  jf_specialization.volt
examples/math/: calculator.claw  factorial_recursion.volt  fibonacci_recursion.claw  gcd_recursion.volt  mathematical_functions.claw
examples/modules/: main.claw  main.volt
examples/security/: .voltsec  anti_debug_demo.claw  basic_ids.claw  enc_io_demo.claw  ids_stack_trigger.claw  network_sandbox.claw  status.claw  strict_sandbox.claw  tls_demo.claw
examples/strings/: advanced_strings.claw  string_manipulation.claw  string_manipulation.volt  string_repeater.volt  test_string_stress.claw  test_string_stress.volt
modules/: math_utils.claw  math_utils.volt
notes/: benchmarks_v0.8.5.txt
release_notes/: v0.9.2.md
scripts/: pre-commit-voltfmt.ps1
src/: GrammarRules.md  ast.cpp  callable.cpp  callable.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  main.cpp  parser.cpp  parser.h  stmt.h  version.h  version.h.in
src/Interpreter/: interpreter.cpp  interpreter.h  value.h
src/Lexer/: lexer.cpp  token.cpp  token.h
src/Parser/: ast.h  parser.cpp  parser.h  stmt.h
src/aot/: aot_runtime.cpp  llvm_aot.cpp  llvm_aot.h
src/compiler/: compiler.cpp  compiler.h
src/features/: array.cpp  array.h  callable.cpp  callable.h  class.cpp  class.h  hashmap.cpp  hashmap.h  string_pool.cpp  string_pool.h
src/interpreter/: array_methods.h  environment.cpp  environment.h  errors.h  module.h  (+10 more)
test_data/: perf_test_0.txt  perf_test_1.txt  perf_test_3.txt  perf_test_4.txt  perf_test_6.txt  perf_test_9.txt
tests/: integration_tests.cpp  manual_encrypted_io.claw  manual_log_write.claw  manual_read_io.claw  test_array_advanced.cpp  test_arrays.cpp  test_arrays_extended.cpp  test_basic_arithmetic.cpp  test_benchmark_assertions.cpp  test_builtin_functions.cpp  test_call_ic_diagnostics.cpp  test_classes.cpp  test_control_flow.cpp  test_edge_cases_advanced.cpp  test_enhanced_features.cpp  test_environment.cpp  test_error_reporting.cpp  test_evaluator.cpp  test_functional_advanced.cpp  test_functions.cpp  test_hash_maps.cpp  test_hotness_counters.cpp  test_improved_hash_maps.cpp  test_interpreter.cpp  test_interpreter_edge_cases.cpp  test_json.cpp  test_lexer.cpp  test_math_functions.cpp  test_new_features.cpp  test_parser.cpp  test_performance.cpp  test_performance_limits.cpp  test_property_fuzz.cpp  test_property_ic_megamorphic.cpp  test_run_until.cpp  test_stress_limits.cpp  test_string_enhancements.cpp  test_string_file_functions.cpp  test_string_functions.cpp  test_string_operations.cpp  (+11 more)
vscode-extension/: extension.js  package.json
(+50 files in other folders)
